--- a/MyWeather/App.xaml
+++ b/MyWeather/App.xaml
@@ -4,6 +4,25 @@
              xmlns:local="clr-namespace:MyWeather"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        
+        <Style x:Key="textHint" TargetType="TextBlock">
+            <Setter Property ="Foreground" Value="#acb0af"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="Grid.Column" Value="1"/>
+            <Setter Property="Panel.ZIndex" Value="1"/>
+            <Setter Property="Margin" Value="10 0 0 0"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
          
+        <Style x:Key="textBox" TargetType="TextBox">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Foreground" Value="#878787"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="Margin" Value="10 0 0 0"/>
+            <Setter Property="Grid.Column" Value="1"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
     </Application.Resources>
 </Application>
