--- a/MyWeather/MainWindow.xaml
+++ b/MyWeather/MainWindow.xaml
@@ -5,36 +5,113 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MyWeather"
         mc:Ignorable="d"
-        Title="MainWindow" Height="685" Width="995" Background="Transparent"
+        Title="MainWindow" Height="5978" Width="1280" Background="Transparent"
         WindowStyle="None" AllowsTransparency="True" WindowStartupLocation="CenterScreen" FontFamily="Ubuntu Condensed">
     <Grid>
-       <Grid.ColumnDefinitions>
-           <ColumnDefinition Width="260"/>
-           <ColumnDefinition Width="*"/>   
-       </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
         
-        <!--Left side-->
-        <Border CornerRadius="30 0 0 30" Background="#ffffff">
-            
-        </Border>
-        
-        <!--Rirht side-->
-        <Border CornerRadius="0 30 30 0"  Grid.Column="1" MouseDown="Border_MouseDown" Background="#F6F6F6" >
+        <!-- Head of the page -->
+        <Border CornerRadius="0" Background="#ffffff">
+            <Grid>
+                <Image Source="icons/love 4.png" Height="25" HorizontalAlignment="Left" Margin="150 35  0 0"/>
+                <Image Source="icons/settings.png" Height="25" HorizontalAlignment="Left" Margin="100 35  0 0"/>
+
             <StackPanel>
-                <!--TextBox search-->
-                <Border BorderBrush="#d9d9d9" BorderThickness="1" CornerRadius="15" Width="200" HorizontalAlignment="Center" Margin="0 35 0 0 ">
+                <Border BorderBrush="#d9d9d9" BorderThickness="1" CornerRadius="15" Width="200" HorizontalAlignment="Right" Margin="0 35 20 0 ">
                     <Grid Margin="7">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        
-                        <Image/>
-                        <TextBlock x:Name="textSearch" MouseDown="textSearch_MouseDown" Text="Search ..." Style="{StaticResource textHint}"/>
-                        <TextBox Name="txtSearch" TextChanged="txtSearch_TextChanged" Style="{StaticResource textBox}"/>
+
+                        <TextBlock x:Name="TextSearch" MouseDown="textSearch_MouseDown" Text="Search ..." Style="{StaticResource TextHint}"/>
+                        <TextBox Grid.Column="0" Name="TxtSearch" TextChanged="txtSearch_TextChanged" Style="{StaticResource TextBox}"/>
+                        <Image Grid.Column="0" Source="icons/search-interface-symbol 1.png" Height="25" Margin="5 0 0 0 "/>
                     </Grid>
                 </Border>
             </StackPanel>
+            </Grid>
+        </Border>
+        
+        <Border Grid.Row="1" CornerRadius="0" Background="#ffffff">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Border Grid.Column="1" BorderThickness="1" CornerRadius="15" Width="300" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="65,20,20,0">
+                    <StackPanel HorizontalAlignment="Center">
+                        <TextBlock Text="Санкт-Петербург" Style="{StaticResource TextNormal}" Margin="5,0"/>
+                        <TextBlock Text="Текущее место" Style="{StaticResource TextHint}" Margin="5,0"/>
+                    </StackPanel>
+                </Border>
+                
+                <Image Grid.Column="1" Source="icons/main_sun.png" Width="410" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,60,0,0"/>
+            </Grid>
+        </Border>
+
+        <!-- Прогноз погоды на сегодня -->
+        <Border Grid.Row="2" CornerRadius="0" Background="#FFFFFF">
+            <Border Grid.Column="1" BorderBrush="#616161" BorderThickness="4" CornerRadius="75" Width="1200" Height="436" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="40,20,40,0">
+                <StackPanel HorizontalAlignment="Center">
+                    <TextBlock Text="ПРОГНОЗ НА СЕГОДНЯ" Style="{StaticResource TextBlockHeader}" HorizontalAlignment="Center" Margin="0 30 0 0"/>
+                    
+                    <ScrollViewer Height="196" Width="1190" Margin="0 60 0 0" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                            <Grid Margin="0 0 40 0">
+                                <TextBlock Text="10:00" Style="{StaticResource TextTime}"/>
+                                <Image Source="icons/Hourly Forecast Item.png" Width="102" Height="98" HorizontalAlignment="Center" Margin="0 50 0 0"/>
+                            </Grid>
+                            
+                            <Grid Margin="0 0 40 0">
+                                <TextBlock Text="11:00" Style="{StaticResource TextTime}"/>
+                                <Image Source="icons/Hourly Forecast Item.png" Width="102" Height="98" HorizontalAlignment="Center" Margin="0 50 0 0"/>
+                            </Grid>
+                            
+                            <Grid Margin="0 0 40 0">
+                                <TextBlock Text="12:00" Style="{StaticResource TextTime}"/>
+                                <Image Source="icons/sun.png" Width="102" Height="98" HorizontalAlignment="Center" Margin="0 50 0 0"/>
+                            </Grid>
+                            
+                            <Grid Margin="0 0 40 0">
+                                <TextBlock Text="13:00" Style="{StaticResource TextTime}"/>
+                                <Image Source="icons/sun.png" Width="102" Height="98" HorizontalAlignment="Center" Margin="0 50 0 0"/>
+                            </Grid>
+                            
+                            <Grid Margin="0 0 40 0">
+                                <TextBlock Text="14:00" Style="{StaticResource TextTime}"/>
+                                <Image Source="icons/sun.png" Width="102" Height="98" HorizontalAlignment="Center" Margin="0 50 0 0"/>
+                            </Grid>
+                            
+                            <Grid Margin="0 0 40 0">
+                                <TextBlock Text="15:00" Style="{StaticResource TextTime}"/>
+                                <Image Source="icons/sun.png" Width="102" Height="98" HorizontalAlignment="Center" Margin="0 50 0 0"/>
+                            </Grid>
+                            
+                            <Grid Margin="0 0 40 0">
+                                <TextBlock Text="16:00" Style="{StaticResource TextTime}"/>
+                                <Image Source="icons/sun.png" Width="102" Height="98" HorizontalAlignment="Center" Margin="0 50 0 0"/>
+                            </Grid>
+                            
+                            <Grid Margin="0 0 40 0">
+                                <TextBlock Text="17:00" Style="{StaticResource TextTime}"/>
+                                <Image Source="icons/sun.png" Width="102" Height="98" HorizontalAlignment="Center" Margin="0 50 0 0"/>
+                            </Grid>
+                            
+                        </StackPanel>
+                    </ScrollViewer>
+                </StackPanel>
+            </Border>
+        </Border>
+        
+        <Border Grid.Row="3" CornerRadius="0" Background="#FFFFFF">
+                
         </Border>
     </Grid>
 </Window>
