--- a/MyWeather/App.xaml
+++ b/MyWeather/App.xaml
@@ -18,13 +18,24 @@
             <Setter Property="FontSize" Value="20"/>
             <Setter Property="Grid.Column" Value="1"/>
             <Setter Property="Panel.ZIndex" Value="1"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
+        
+        <Style x:Key="TextBox" TargetType="TextBox">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Foreground" Value="#878787"/>
+            <Setter Property="FontSize" Value="14"/>
             <Setter Property="Margin" Value="10 0 0 0"/>
+            <Setter Property="Grid.Column" Value="1"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style>
         
         <Style x:Key="TextBlockHeader" TargetType="TextBlock">
-            <Setter Property ="Foreground" Value="#181818"/>
+            <Setter Property ="Foreground" Value="#616169"/>
             <Setter Property="FontSize" Value="60"/>
+            <Setter Property="FontWeight" Value="Medium"/>
             <Setter Property="Grid.Column" Value="1"/>
             <Setter Property="Panel.ZIndex" Value="1"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
@@ -39,16 +50,74 @@
             <Setter Property="HorizontalAlignment" Value="Center"/>
         </Style>
         
-         
-        <Style x:Key="TextBox" TargetType="TextBox">
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Foreground" Value="#878787"/>
-            <Setter Property="FontSize" Value="14"/>
-            <Setter Property="Margin" Value="10 0 0 0"/>
+        <Style x:Key="TextDate" TargetType="TextBlock">
+            <Setter Property ="Foreground" Value="#000000"/>
+            <Setter Property="FontSize" Value="80"/>
             <Setter Property="Grid.Column" Value="1"/>
-            <Setter Property="BorderBrush" Value="Transparent"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="Panel.ZIndex" Value="1"/>
+            <Setter Property="Margin" Value="50 120 0 0"/>
         </Style>
+        
+        <Style x:Key="TextDay" TargetType="TextBlock">
+            <Setter Property ="Foreground" Value="#646464"/>
+            <Setter Property="FontSize" Value="30"/>
+            <Setter Property="Grid.Column" Value="1"/>
+            <Setter Property="Panel.ZIndex" Value="1"/>
+            <Setter Property="Margin" Value="150 125 0 0"/>
+        </Style>
+        
+        <Style x:Key="TextDescIcon" TargetType="TextBlock">
+            <Setter Property ="Foreground" Value="#616161"/>
+            <Setter Property="FontSize" Value="28"/>
+            <Setter Property="Grid.Column" Value="1"/>
+            <Setter Property="Panel.ZIndex" Value="1"/>
+            <Setter Property="Margin" Value="30 220 0 0"/>
+        </Style>
+        
+        <Style x:Key="TextBoxContent" TargetType="TextBlock">
+            <Setter Property ="Foreground" Value="#646464"/>
+            <Setter Property="FontSize" Value="30"/>
+            <Setter Property="Grid.Column" Value="1"/>
+            <Setter Property="Panel.ZIndex" Value="1"/>
+            <Setter Property="Margin" Value="165 125 0 0"/>
+        </Style>
+        
+        <Style x:Key="TextMagArea" TargetType="TextBlock">
+            <Setter Property ="Foreground" Value="#616161"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="Grid.Column" Value="1"/>
+            <Setter Property="Panel.ZIndex" Value="1"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="Margin" Value="0 250 0 0"/>
+        </Style>
+        
+        <Style x:Key="TextUfIndex" TargetType="TextBlock">
+            <Setter Property ="Foreground" Value="#616161"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="Grid.Column" Value="1"/>
+            <Setter Property="Panel.ZIndex" Value="1"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="Margin" Value="0 320 0 0"/>
+        </Style>
+        
+        <Style x:Key="TextDescWeather" TargetType="TextBlock">
+            <Setter Property ="Foreground" Value="#616161"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="Grid.Column" Value="1"/>
+            <Setter Property="Panel.ZIndex" Value="1"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="Margin" Value="0 0 30 0"/>
+        </Style>
+
+        <Style x:Key="TextNumWeather" TargetType="TextBlock">
+            <Setter Property ="Foreground" Value="#000000"/>
+            <Setter Property="FontSize" Value="25"/>
+            <Setter Property="Grid.Column" Value="1"/>
+            <Setter Property="Panel.ZIndex" Value="1"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="Margin" Value="0 0 30 0"/>
+        </Style>
+
+        
     </Application.Resources>
 </Application>
